added Media model, import-gedcom working
